src/objects/Price_list__c.object
<CustomObject>
    <fields>
        <fullName>HD_Tier__c</fullName>
        <label>HD Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>if( Regional_Price__c &lt;&gt; 0 ,Regional_Price__c ,if( (ISPICKVAL(HD_Tier__c , &quot;Gold&quot;)), Product__r.Gold_Price__c, if( ISPICKVAL(HD_Tier__c , &quot;Silver&quot;), Product__r.Silver_price__c , if( ISPICKVAL(HD_Tier__c , &quot;bronze&quot;),Product__r.Bronze_price__c ,Product__r.Gold_Price__c))  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Pick_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Price__c</fullName>
        <label>Regional Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Pick_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price List</label>
    <nameField>
        <label>Pick List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>